--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello Dr. Weirich
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="David E. Weirich">
+        <meta name="author" content="David E. Weirich">
+        <title>Home</title>
+    </head>
+
+    <body>
+        Hello Dr. Weirich
+    </body>
+</html>
