--- a/d3.html
+++ b/d3.html
@@ -16,20 +16,31 @@
         </p>
 
         <script>
-            var data = [20, 40, 50];
+            var data = [20, 40, 50, 60];
+            var width = 500;
+            var height = 500;
+            
+            var widthScale = d3.scaleLinear()
+            .domain([0, 60])
+            .range([0, width]);
+
+            var colorScale = d3.scaleLinear()
+            .domain([0, 60])
+            .range(["red", "blue"]);
 
             var canvas = d3.select("body")
             .append("svg")
-            .attr("width", 500)
-            .attr("height", 500);
+            .attr("width", width)
+            .attr("height", height);
 
             var bars = canvas.selectAll("rect")
             .data(data)
             .enter()
             .append("rect")
-            .attr("width", function(d) {return d * 10;})
+            .attr("width", function(d) {return widthScale(d);})
             .attr("height", 50)
-            .attr("y", function(d, i) {return i * 100;});
+            .attr("y", function(d, i) {return i * 100;})
+            .attr("fill", function(d) {return colorScale(d);});
 
         </script>
     </body>
