--- a/visualize.html
+++ b/visualize.html
@@ -33,7 +33,7 @@
       var rMax = 6;
       var xColumn = "i";
       var yColumn = "commit_count";
-      var rColumn = "commot_count";
+      var rColumn = "commit_count";
       var colorColumn = "next_step";
 
       var xAxisLabelText = "i";
