--- a/visualize.html
+++ b/visualize.html
@@ -12,7 +12,7 @@
         font-size: 16pt;
       }
       .axis .label {
-        font-size: 20pt;
+        font-size: 10;
       }
 
       .axis path, .axis line {
@@ -26,8 +26,8 @@
   <body>
     <script>
 
-      var outerWidth = 300;
-      var outerHeight = 250;
+      var outerWidth = 600;
+      var outerHeight = 500;
       var margin = { left: 60, top: 5, right: 5, bottom: 60 };
       var rMin = 1; // "r" stands for radius
       var rMax = 6;
