--- a/visualize.html
+++ b/visualize.html
@@ -101,10 +101,8 @@
       }
 
       function type(d){
-        d.sepal_length = +d.sepal_length;
-        d.sepal_width  = +d.sepal_width;
-        d.petal_length = +d.petal_length;
-        d.petal_width  = +d.petal_width;
+        d.i = +d.i;
+        d.commit_count  = +d.commit_count;
         return d;
       }
 
