--- a/kata-data.html
+++ b/kata-data.html
@@ -19,7 +19,7 @@ div.toolTip {
 </style>
 <body>
   <p>
-    DEMO: Working on the D3.js library to plot of the data for submitted katas. This is a work in progress. I still need to learn how to get the axis to look right and have changing lables. The plot is commit counts vs. age of github account. Blue dots are accepted, orange are asked to resubmit, green are tech interview, and red is dismiss from process. Click the "Change!" button to instead plot Review time of day vs. number of languages.
+    DEMO: Working on the D3.js library to plot of the data for submitted katas. This is a work in progress. I still need to learn how to get the axis to look right and have changing lables. The plot is commit counts vs. age of github account. Blue dots are accepted, orange are asked to resubmit, green are tech interview, and red is dismiss from process. You can hover over each dot to see which submission it is. Click the "Change!" button to instead plot Review time of day vs. number of languages. This will screw up the axis even more though!
   </p>
 
   <script src="format.js"></script>
