--- a/kata-data.html
+++ b/kata-data.html
@@ -19,7 +19,7 @@ div.toolTip {
 </style>
 <body>
   <p>
-    DEMO: Working on the D3.js library to plot of the data for submitted katas. This is a work in progress. I still need to learn how to get the axis to look right and have changing lables. The plot is commit counts vs. age of github account. Blue dots are accepted, orange are asked to resubmit, green are tech interview, and red is dismiss from process. You can hover over each dot to see which submission it is. Click the "Change!" button to instead plot Review time of day vs. number of languages. This will screw up the axis even more though!
+    Testing out D3.js using data pulled from github.com about Pillar Technology Kata Submissions.
   </p>
 
   <script src="format.js"></script>
@@ -27,6 +27,7 @@ div.toolTip {
 
   <br />
 
-  <input type="button" value="Change!" onclick="update_plot(data, 'review_time', 'lang_count')"></input>
+  <input type="button" value="Commit Count vs Account Age" onclick="update_plot(data, 'commit_count', 'account_age')"></input>
+  <input type="button" value="Review Date vs Review Time" onclick="update_plot(data, 'review_date', 'review_time')"></input>
 </body>
 </html>
